test/libyul/yulSyntaxTests/objects/datasize_nonstring.yul
object "A" {
  code {
    pop(datasize(0))
  }
}
// ----
// TypeError 5017: (30-38): The identifier "datasize" is reserved and can not be used.
// TypeError 5859: (39-40): Function expects string literal.
